--------------------------------------------------------------------------------------------------
Release notes version 1.9.5_beta : Enhancements, modifications and corrected bugs since version 1.9.4 :
--------------------------------------------------------------------------------------------------
12/07/24 (TRUST) GPU          : Enable HIP support in PETSc to get Hypre multigrid available on AMD GPU with: petsc_gpu gcp|gmres { precond boomeramg { } ... }
12/07/24 (TRUST) GPU          : New available features for VEF discretization: Quasi-compressible (partial), Wale and Smagorinski turbulence models, Semi-implicit scheme, Sources term (Boussinesq, Canal_perio)
09/07/24 (TRUST) New feature  : Add new problem/equation Pb_Multiphase_Enthalpie/Energie_Multiphase_Enthalpie : resolution in h not in T
--------------------------------------------------------------------------------------------------
Release notes version 1.9.4 : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
17/05/24 (TRUST) Minor change : In Jupyter validation form Python API, method 'run.description()' is not available anymore. A MarkDown block should be used instead
17/05/24 (TRUST) Keyword      : Champ_front_parametrique (boundary fields list) and Champ_parametrique (fields list) to chain multi-stationary or stationary-transient scenarios (see V&V sheets under Verification/Champs). Experimental, only tested with Flica5
16/05/24 (TRUST) Tools        : Upgrade to MEDCoupling 9.13.0
13/05/24 (TRUST) New feature  : New LES Smago/WALE models developped for Pb_Multiphase. To be used in TrioCFD (CMFD module !)