@@ -28,6 +28,12 @@
 Implemente_base_sans_constructeur(Modele_turbulence_hyd_LES_base, "Modele_turbulence_hyd_LES_base", Modele_turbulence_hyd_0_eq_base);
 
 // XD mod_turb_hyd_ss_maille modele_turbulence_hyd_deriv mod_turb_hyd_ss_maille -1 Class for sub-grid turbulence model for Navier-Stokes equations.
+// XD attr formulation_a_nb_points form_a_nb_points formulation_a_nb_points 1 The structure fonction is calculated on nb points and we should add the 2 directions (0:OX, 1:OY, 2:OZ) constituting the homegeneity planes. Example for channel flows, planes parallel to the walls.
+
+// XD form_a_nb_points objet_lecture nul 0 The structure fonction is calculated on nb points and we should add the 2 directions (0:OX, 1:OY, 2:OZ) constituting the homegeneity planes. Example for channel flows, planes parallel to the walls.
+// XD  attr nb entier(into=[4]) nb 0 Number of points.
+// XD  attr dir1 entier(max=2) dir1 0 First direction.
+// XD  attr dir2 entier(max=2) dir2 0 Second direction.
 
 Modele_turbulence_hyd_LES_base::Modele_turbulence_hyd_LES_base()
 {
